# Nosce-Codicem

./: LICENSE  README.md  pyproject.toml  test_run.py
src/: list_loop_test.py  list_recursion_test.py  test_run.py  var_loop_test.py  var_recursion_test.py
src/nosce_codicem/: __init__.py
src/nosce_codicem.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/nosce_codicem/core/: controller.py  event.py
src/nosce_codicem/facade/: trace_api.py
src/nosce_codicem/handlers/: base.py  loop.py  recursion.py
src/nosce_codicem/observers/: base.py  list.py  variable.py
src/nosce_codicem/output/: formatter.py  renderer.py  viewer.py
tests/: test_list_loop.py  test_list_recursion.py  test_var_recursion.py
