[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nosce-codicem"
version = "0.1.2"
description = "A Python tracing and visualization library for algorithm learning."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

authors = [
  { name = "Hyeonbin Kim" }
]

dependencies = [
    "rich>=13.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
